fix: fix l wrap on theater.customCss.css

--- a/theater/assets/css/theater.customCss.css
+++ b/theater/assets/css/theater.customCss.css
@@ -73,6 +73,7 @@ button {
     padding-left: 0 !important;
   }
   l {
+    white-space: normal;
     font-variant: normal;
   }
   stage, sp, s {
